--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "prod": "vite --mode production",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -22,7 +23,8 @@
     "socket.io-client": "^4.7.2",
     "y-monaco": "^0.1.4",
     "y-websocket": "^1.5.0",
-    "yjs": "^13.6.7"
+    "yjs": "^13.6.7",
+    "axios": "1.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
