--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "prod": "vite --mode production",
-    "build": "tsc && vite build",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -24,7 +24,8 @@
     "y-monaco": "^0.1.4",
     "y-websocket": "^1.5.0",
     "yjs": "^13.6.7",
-    "axios": "1.5.1"
+    "axios": "1.5.1",
+    "cross-env": "7.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
