--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,5 +29,6 @@ jobs:
         run: |
           pnpm i
           pnpm build
+          find . -name "node_modules" -exec rm -rf '{}' +
           rsync -vrm   ./* ${{ secrets.USER_IP }}:/var/www/code-pro/
           ssh ${{ secrets.USER_IP }} "cd /var/www/code-pro/ && pnpm install && cd /var/www/code-pro/server && pnpm run kill && pnpm run deploy"
